--- a/index.html
+++ b/index.html
@@ -3,25 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stack Tags</title>
+    <title>webapp</title>
   </head>
-  <style>
-    * {
-      font-family: "Poppins", sans-serif;
-      font-family: "Secular One", sans-serif;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      width: 100%;
-      height: 100vh;
-    }
-    #root {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
